// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/RadioGroup/RadioGroup Defaults play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5"
            data-has-spacing="true"
  >
    <legend id="legendId-:re:"
            class="_srOnly_u2f5e_39"
    >
      Type virksomhet
    </legend>
    <div class="_legend_u2f5e_15"
         aria-hidden="true"
    >
      Type virksomhet
    </div>
    <div class="_contentContainer_u2f5e_32">
      <div class="_radioGroupItemContainer_1f9v8_5">
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:rf:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 value="foretak"
                 name="radioInputName-:rd:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:rf:"
                 tabindex="-1"
          >
            Enkeltpersonsforetak
          </label>
        </div>
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:rg:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 value="selskap"
                 name="radioInputName-:rd:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:rg:"
                 tabindex="-1"
          >
            Aksjeselskap
          </label>
        </div>
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:rh:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 value="annet"
                 name="radioInputName-:rd:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:rh:"
                 tabindex="-1"
          >
            Annet
          </label>
        </div>
      </div>
      <div id="radioErrorId-:rc:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup VariantHorizontal smoke-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5"
            data-has-spacing="true"
  >
    <legend id="legendId-:rk:"
            class="_srOnly_u2f5e_39"
    >
      Type virksomhet
    </legend>
    <div class="_legend_u2f5e_15"
         aria-hidden="true"
    >
      Type virksomhet
    </div>
    <div class="_contentContainer_u2f5e_32">
      <div class="_radioGroupItemContainer_1f9v8_5 _radioGroupItemContainer_horizontal_1f9v8_10">
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:rl:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 value="foretak"
                 name="radioInputName-:rj:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:rl:"
                 tabindex="-1"
          >
            Enkeltpersonsforetak
          </label>
        </div>
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:rm:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 value="selskap"
                 name="radioInputName-:rj:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:rm:"
                 tabindex="-1"
          >
            Aksjeselskap
          </label>
        </div>
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:rn:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 value="annet"
                 name="radioInputName-:rj:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:rn:"
                 tabindex="-1"
          >
            Annet
          </label>
        </div>
      </div>
      <div id="radioErrorId-:ri:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithAttributes play-test 1`] = `
<div data-test-block="true">
  <fieldset id="htmlId"
            data-testid="123ID"
            class="_fieldset_u2f5e_5 dummyClassname"
            lang="nb"
            form="123form"
            data-has-spacing="true"
  >
    <legend id="legendId-:r8:"
            class="_srOnly_u2f5e_39"
    >
      Type virksomhet
    </legend>
    <div class="_legend_u2f5e_15"
         aria-hidden="true"
    >
      Type virksomhet
    </div>
    <div class="_contentContainer_u2f5e_32">
      <div class="_radioGroupItemContainer_1f9v8_5">
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r9:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 value="foretak"
                 name="radioInputName-:r7:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r9:"
                 tabindex="-1"
          >
            Enkeltpersonsforetak
          </label>
        </div>
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:ra:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 value="selskap"
                 name="radioInputName-:r7:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:ra:"
                 tabindex="-1"
          >
            Aksjeselskap
          </label>
        </div>
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:rb:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 value="annet"
                 name="radioInputName-:r7:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:rb:"
                 tabindex="-1"
          >
            Annet
          </label>
        </div>
      </div>
      <div id="radioErrorId-:r6:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithCustomClassNames play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5"
            data-has-spacing="true"
  >
    <legend id="legendId-:r3q:"
            class="_srOnly_u2f5e_39"
    >
      Type virksomhet
    </legend>
    <div class="_legend_u2f5e_15   _legendNoMarginBottom_u2f5e_28 dummyClassname"
         aria-hidden="true"
    >
      Type virksomhet
    </div>
    <button class="_button_19ayz_1 _button_extraSmall_19ayz_34 _button_outlined_19ayz_98 _helpButton_5szkl_27"
            data-brightness="default"
            type="button"
            aria-describedby="legendId-:r3q:"
            aria-expanded="false"
    >
      <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _icon_19ayz_26"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r3r:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r3r:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="_description_5szkl_17   dummyClassname">
      beskrivelse
    </div>
    <div class="_contentContainer_u2f5e_32">
      <div class="_radioGroupItemContainer_1f9v8_5">
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r3s:"
                 class="_radioInput_1ybg2_5"
                 aria-describedby="radioErrorId-:r3o:"
                 aria-invalid="true"
                 type="radio"
                 value="foretak"
                 name="radioInputName-:r3p:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r3s:"
                 tabindex="-1"
          >
            Enkeltpersonsforetak
          </label>
        </div>
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r3t:"
                 class="_radioInput_1ybg2_5"
                 aria-describedby="radioErrorId-:r3o:"
                 aria-invalid="true"
                 type="radio"
                 value="selskap"
                 name="radioInputName-:r3p:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r3t:"
                 tabindex="-1"
          >
            Aksjeselskap
          </label>
        </div>
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r3u:"
                 class="_radioInput_1ybg2_5"
                 aria-describedby="radioErrorId-:r3o:"
                 aria-invalid="true"
                 type="radio"
                 value="annet"
                 name="radioInputName-:r3p:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r3u:"
                 tabindex="-1"
          >
            Annet
          </label>
        </div>
      </div>
      <div id="radioErrorId-:r3o:"
           aria-live="assertive"
           aria-atomic="true"
      >
        <div class="_errorMessage_1ycvu_15 _errorMessage_1f9v8_15 dummyClassname">
          <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _errorMessageIcon_1ycvu_28"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
            </path>
          </svg>
          <p class="_errorMessageText_1ycvu_32">
            feil
          </p>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithDefaultValue play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5"
            data-has-spacing="true"
  >
    <legend id="legendId-:r16:"
            class="_srOnly_u2f5e_39"
    >
      Type virksomhet
    </legend>
    <div class="_legend_u2f5e_15"
         aria-hidden="true"
    >
      Type virksomhet
    </div>
    <div class="_contentContainer_u2f5e_32">
      <div class="_radioGroupItemContainer_1f9v8_5">
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r17:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 value="foretak"
                 name="radioInputName-:r15:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r17:"
                 tabindex="-1"
          >
            Enkeltpersonsforetak
          </label>
        </div>
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r18:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 value="selskap"
                 name="radioInputName-:r15:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r18:"
                 tabindex="-1"
          >
            Aksjeselskap
          </label>
        </div>
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r19:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 value="annet"
                 checked
                 name="radioInputName-:r15:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r19:"
                 tabindex="-1"
          >
            Annet
          </label>
        </div>
      </div>
      <div id="radioErrorId-:r14:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithDescription play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5"
            data-has-spacing="true"
  >
    <legend id="legendId-:r34:"
            class="_srOnly_u2f5e_39"
    >
      Type virksomhet
    </legend>
    <div class="_legend_u2f5e_15   _legendNoMarginBottom_u2f5e_28"
         aria-hidden="true"
    >
      Type virksomhet
    </div>
    <div class="_description_5szkl_17">
      Vi trenger å vite din type virksomhet.
    </div>
    <div class="_contentContainer_u2f5e_32">
      <div class="_radioGroupItemContainer_1f9v8_5">
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r35:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 value="foretak"
                 name="radioInputName-:r33:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r35:"
                 tabindex="-1"
          >
            Enkeltpersonsforetak
          </label>
        </div>
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r36:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 value="selskap"
                 name="radioInputName-:r33:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r36:"
                 tabindex="-1"
          >
            Aksjeselskap
          </label>
        </div>
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r37:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 value="annet"
                 name="radioInputName-:r33:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r37:"
                 tabindex="-1"
          >
            Annet
          </label>
        </div>
      </div>
      <div id="radioErrorId-:r32:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithDisabled play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5"
            disabled
            data-has-spacing="true"
  >
    <legend id="legendId-:r1c:"
            class="_srOnly_u2f5e_39"
    >
      Type virksomhet
    </legend>
    <div class="_legend_u2f5e_15"
         aria-hidden="true"
    >
      Type virksomhet
    </div>
    <div class="_contentContainer_u2f5e_32">
      <div class="_radioGroupItemContainer_1f9v8_5">
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r1d:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 value="foretak"
                 name="radioInputName-:r1b:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r1d:"
                 tabindex="-1"
          >
            Enkeltpersonsforetak
          </label>
        </div>
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r1e:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 value="selskap"
                 name="radioInputName-:r1b:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r1e:"
                 tabindex="-1"
          >
            Aksjeselskap
          </label>
        </div>
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r1f:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 value="annet"
                 checked
                 name="radioInputName-:r1b:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r1f:"
                 tabindex="-1"
          >
            Annet
          </label>
        </div>
      </div>
      <div id="radioErrorId-:r1a:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithErrorMessage play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5"
            data-has-spacing="true"
  >
    <legend id="legendId-:r2g:"
            class="_srOnly_u2f5e_39"
    >
      Type virksomhet
    </legend>
    <div class="_legend_u2f5e_15"
         aria-hidden="true"
    >
      Type virksomhet
    </div>
    <div class="_contentContainer_u2f5e_32">
      <div class="_radioGroupItemContainer_1f9v8_5">
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r2h:"
                 class="_radioInput_1ybg2_5"
                 aria-describedby="radioErrorId-:r2e:"
                 aria-invalid="true"
                 type="radio"
                 value="foretak"
                 name="radioInputName-:r2f:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r2h:"
                 tabindex="-1"
          >
            Enkeltpersonsforetak
          </label>
        </div>
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r2i:"
                 class="_radioInput_1ybg2_5"
                 aria-describedby="radioErrorId-:r2e:"
                 aria-invalid="true"
                 type="radio"
                 value="selskap"
                 name="radioInputName-:r2f:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r2i:"
                 tabindex="-1"
          >
            Aksjeselskap
          </label>
        </div>
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r2j:"
                 class="_radioInput_1ybg2_5"
                 aria-describedby="radioErrorId-:r2e:"
                 aria-invalid="true"
                 type="radio"
                 value="annet"
                 checked
                 name="radioInputName-:r2f:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r2j:"
                 tabindex="-1"
          >
            Annet
          </label>
        </div>
      </div>
      <div id="radioErrorId-:r2e:"
           aria-live="assertive"
           aria-atomic="true"
      >
        <div class="_errorMessage_1ycvu_15 _errorMessage_1f9v8_15">
          <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _errorMessageIcon_1ycvu_28"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
            </path>
          </svg>
          <p class="_errorMessageText_1ycvu_32">
            Feilmelding
          </p>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithErrorMessageAndAriaDescribedby play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5"
            data-has-spacing="true"
  >
    <legend id="legendId-:r2n:"
            class="_srOnly_u2f5e_39"
    >
      Type virksomhet
    </legend>
    <div class="_legend_u2f5e_15"
         aria-hidden="true"
    >
      Type virksomhet
    </div>
    <div class="_contentContainer_u2f5e_32">
      <div class="_radioGroupItemContainer_1f9v8_5">
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r2o:"
                 class="_radioInput_1ybg2_5"
                 aria-describedby="konsumentId radioErrorId-:r2l:"
                 aria-invalid="true"
                 type="radio"
                 name="radioInputName-:r2m:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r2o:"
                 tabindex="-1"
          >
            Enkeltpersonsforetak
          </label>
        </div>
      </div>
      <div id="radioErrorId-:r2l:"
           aria-live="assertive"
           aria-atomic="true"
      >
        <div class="_errorMessage_1ycvu_15 _errorMessage_1f9v8_15">
          <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _errorMessageIcon_1ycvu_28"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
            </path>
          </svg>
          <p class="_errorMessageText_1ycvu_32">
            Feilmelding
          </p>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithEventHandlers play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5"
            data-has-spacing="true"
  >
    <legend id="legendId-:r3a:"
            class="_srOnly_u2f5e_39"
    >
      Type virksomhet
    </legend>
    <div class="_legend_u2f5e_15"
         aria-hidden="true"
    >
      Type virksomhet
    </div>
    <div class="_contentContainer_u2f5e_32">
      <div class="_radioGroupItemContainer_1f9v8_5">
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r3b:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 value="selskap"
                 name="radioInputName-:r39:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r3b:"
                 tabindex="-1"
          >
            Radio har blitt klikket på
          </label>
        </div>
      </div>
      <div id="radioErrorId-:r38:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithHelpText play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5"
            data-has-spacing="true"
  >
    <legend id="legendId-:r2s:"
            class="_srOnly_u2f5e_39"
    >
      Type virksomhet
    </legend>
    <div class="_legend_u2f5e_15   _legendNoMarginBottom_u2f5e_28"
         aria-hidden="true"
    >
      Type virksomhet
    </div>
    <button class="_button_19ayz_1 _button_extraSmall_19ayz_34 _button_outlined_19ayz_98 _helpButton_5szkl_27"
            data-brightness="default"
            type="button"
            aria-describedby="legendId-:r2s:"
            aria-expanded="true"
    >
      <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _icon_19ayz_26"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r2t:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r2t:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="_helpBox_5szkl_32">
      <div class="_helpBoxText_5szkl_45">
        Vi trenger å vite din type virksomhet.
      </div>
      <button class="_button_19ayz_1 _button_small_19ayz_38  _helpBoxCloseButton_5szkl_52"
              data-brightness="default"
              type="button"
      >
        <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _icon_19ayz_26"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r31:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r31:">
            Lukk
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
    </div>
    <div class="_contentContainer_u2f5e_32">
      <div class="_radioGroupItemContainer_1f9v8_5">
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r2u:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 value="foretak"
                 name="radioInputName-:r2r:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r2u:"
                 tabindex="-1"
          >
            Enkeltpersonsforetak
          </label>
        </div>
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r2v:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 value="selskap"
                 name="radioInputName-:r2r:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r2v:"
                 tabindex="-1"
          >
            Aksjeselskap
          </label>
        </div>
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r30:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 value="annet"
                 name="radioInputName-:r2r:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r30:"
                 tabindex="-1"
          >
            Annet
          </label>
        </div>
      </div>
      <div id="radioErrorId-:r2q:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithHelpToggleEvent smoke-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5"
            data-has-spacing="true"
  >
    <legend id="legendId-:r3j:"
            class="_srOnly_u2f5e_39"
    >
      Type virksomhet
    </legend>
    <div class="_legend_u2f5e_15   _legendNoMarginBottom_u2f5e_28"
         aria-hidden="true"
    >
      Type virksomhet
    </div>
    <button class="_button_19ayz_1 _button_extraSmall_19ayz_34 _button_outlined_19ayz_98 _helpButton_5szkl_27"
            data-brightness="default"
            type="button"
            aria-describedby="legendId-:r3j:"
            aria-expanded="false"
    >
      <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _icon_19ayz_26"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r3k:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r3k:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="_contentContainer_u2f5e_32">
      <div class="_radioGroupItemContainer_1f9v8_5">
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r3l:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 value="foretak"
                 name="radioInputName-:r3i:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r3l:"
                 tabindex="-1"
          >
            Enkeltpersonsforetak
          </label>
        </div>
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r3m:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 value="selskap"
                 name="radioInputName-:r3i:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r3m:"
                 tabindex="-1"
          >
            Aksjeselskap
          </label>
        </div>
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r3n:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 value="annet"
                 name="radioInputName-:r3i:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r3n:"
                 tabindex="-1"
          >
            Annet
          </label>
        </div>
      </div>
      <div id="radioErrorId-:r3h:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithHideLegend play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5"
            data-has-spacing="true"
  >
    <legend id="legendId-:rq:"
            class="_srOnly_u2f5e_39"
    >
      Type virksomhet
    </legend>
    <div class="_legend_u2f5e_15  _srOnly_u2f5e_39"
         aria-hidden="true"
    >
      Type virksomhet
    </div>
    <div class="_contentContainer_u2f5e_32 _contentContainerNoMarginTop_u2f5e_35">
      <div class="_radioGroupItemContainer_1f9v8_5">
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:rr:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 value="foretak"
                 name="radioInputName-:rp:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:rr:"
                 tabindex="-1"
          >
            Enkeltpersonsforetak
          </label>
        </div>
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:rs:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 value="selskap"
                 name="radioInputName-:rp:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:rs:"
                 tabindex="-1"
          >
            Aksjeselskap
          </label>
        </div>
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:rt:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 value="annet"
                 name="radioInputName-:rp:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:rt:"
                 tabindex="-1"
          >
            Annet
          </label>
        </div>
      </div>
      <div id="radioErrorId-:ro:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithName play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5"
            data-has-spacing="true"
  >
    <legend id="legendId-:r24:"
            class="_srOnly_u2f5e_39"
    >
      Type virksomhet
    </legend>
    <div class="_legend_u2f5e_15"
         aria-hidden="true"
    >
      Type virksomhet
    </div>
    <div class="_contentContainer_u2f5e_32">
      <div class="_radioGroupItemContainer_1f9v8_5">
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r25:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 value="foretak"
                 name="nameFraKonsument"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r25:"
                 tabindex="-1"
          >
            Enkeltpersonsforetak
          </label>
        </div>
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r26:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 value="selskap"
                 name="nameFraKonsument"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r26:"
                 tabindex="-1"
          >
            Aksjeselskap
          </label>
        </div>
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r27:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 value="annet"
                 name="nameFraKonsument"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r27:"
                 tabindex="-1"
          >
            Annet
          </label>
        </div>
      </div>
      <div id="radioErrorId-:r22:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithOnBlurEvent play-test 1`] = `
<div data-test-block="true">
  <radiogroup-customelement>
  </radiogroup-customelement>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithRef play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5"
            data-has-spacing="true"
            id="dummyIdForwardedFromRef"
  >
    <legend id="legendId-:r2:"
            class="_srOnly_u2f5e_39"
    >
      Type virksomhet
    </legend>
    <div class="_legend_u2f5e_15"
         aria-hidden="true"
    >
      Type virksomhet
    </div>
    <div class="_contentContainer_u2f5e_32">
      <div class="_radioGroupItemContainer_1f9v8_5">
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r3:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 value="foretak"
                 name="radioInputName-:r1:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r3:"
                 tabindex="-1"
          >
            Enkeltpersonsforetak
          </label>
        </div>
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r4:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 value="selskap"
                 name="radioInputName-:r1:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r4:"
                 tabindex="-1"
          >
            Aksjeselskap
          </label>
        </div>
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r5:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 value="annet"
                 name="radioInputName-:r1:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r5:"
                 tabindex="-1"
          >
            Annet
          </label>
        </div>
      </div>
      <div id="radioErrorId-:r0:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithRequired play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5"
            data-has-spacing="true"
  >
    <legend id="legendId-:r1i:"
            class="_srOnly_u2f5e_39"
    >
      Type virksomhet
    </legend>
    <div class="_legend_u2f5e_15"
         aria-hidden="true"
    >
      Type virksomhet
    </div>
    <div class="_contentContainer_u2f5e_32">
      <div class="_radioGroupItemContainer_1f9v8_5">
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r1j:"
                 class="_radioInput_1ybg2_5"
                 required
                 type="radio"
                 value="foretak"
                 name="radioInputName-:r1h:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r1j:"
                 tabindex="-1"
          >
            Enkeltpersonsforetak
          </label>
        </div>
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r1k:"
                 class="_radioInput_1ybg2_5"
                 required
                 type="radio"
                 value="selskap"
                 name="radioInputName-:r1h:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r1k:"
                 tabindex="-1"
          >
            Aksjeselskap
          </label>
        </div>
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r1l:"
                 class="_radioInput_1ybg2_5"
                 required
                 type="radio"
                 value="annet"
                 name="radioInputName-:r1h:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r1l:"
                 tabindex="-1"
          >
            Annet
          </label>
        </div>
      </div>
      <div id="radioErrorId-:r1g:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithRequiredAndMark smoke-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5"
            data-has-spacing="true"
  >
    <legend id="legendId-:r1o:"
            class="_srOnly_u2f5e_39"
    >
      Type virksomhet
    </legend>
    <div class="_legend_u2f5e_15 _legend_required_u2f5e_23"
         aria-hidden="true"
    >
      Type virksomhet
    </div>
    <div class="_contentContainer_u2f5e_32">
      <div class="_radioGroupItemContainer_1f9v8_5">
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r1p:"
                 class="_radioInput_1ybg2_5"
                 required
                 type="radio"
                 value="foretak"
                 name="radioInputName-:r1n:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r1p:"
                 tabindex="-1"
          >
            Enkeltpersonsforetak
          </label>
        </div>
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r1q:"
                 class="_radioInput_1ybg2_5"
                 required
                 type="radio"
                 value="selskap"
                 name="radioInputName-:r1n:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r1q:"
                 tabindex="-1"
          >
            Aksjeselskap
          </label>
        </div>
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r1r:"
                 class="_radioInput_1ybg2_5"
                 required
                 type="radio"
                 value="annet"
                 name="radioInputName-:r1n:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r1r:"
                 tabindex="-1"
          >
            Annet
          </label>
        </div>
      </div>
      <div id="radioErrorId-:r1m:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithRequiredAndMarkAndLegendAsMarkup smoke-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5"
            data-has-spacing="true"
  >
    <legend id="legendId-:r1u:"
            class="_srOnly_u2f5e_39"
    >
      <h4 class="_heading_12p5o_1 _heading_level3_12p5o_34">
        Type virksomhet
      </h4>
      <span>
        Med virksomhet så menes bla bla
      </span>
    </legend>
    <div class="_legend_u2f5e_15 _legendWithMarkup_required_u2f5e_23"
         aria-hidden="true"
    >
      <h4 class="_heading_12p5o_1 _heading_level3_12p5o_34">
        Type virksomhet
      </h4>
      <span>
        Med virksomhet så menes bla bla
      </span>
    </div>
    <div class="_contentContainer_u2f5e_32">
      <div class="_radioGroupItemContainer_1f9v8_5">
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r1v:"
                 class="_radioInput_1ybg2_5"
                 required
                 type="radio"
                 value="foretak"
                 name="radioInputName-:r1t:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r1v:"
                 tabindex="-1"
          >
            Enkeltpersonsforetak
          </label>
        </div>
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r20:"
                 class="_radioInput_1ybg2_5"
                 required
                 type="radio"
                 value="selskap"
                 name="radioInputName-:r1t:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r20:"
                 tabindex="-1"
          >
            Aksjeselskap
          </label>
        </div>
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r21:"
                 class="_radioInput_1ybg2_5"
                 required
                 type="radio"
                 value="annet"
                 name="radioInputName-:r1t:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r21:"
                 tabindex="-1"
          >
            Annet
          </label>
        </div>
      </div>
      <div id="radioErrorId-:r1s:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithSelectedValue play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5"
            data-has-spacing="true"
  >
    <legend id="legendId-:r10:"
            class="_srOnly_u2f5e_39"
    >
      Type virksomhet
    </legend>
    <div class="_legend_u2f5e_15"
         aria-hidden="true"
    >
      Type virksomhet
    </div>
    <div class="_contentContainer_u2f5e_32">
      <div class="_radioGroupItemContainer_1f9v8_5">
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r11:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 value="foretak"
                 name="radioInputName-:rv:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r11:"
                 tabindex="-1"
          >
            Enkeltpersonsforetak
          </label>
        </div>
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r12:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 value="selskap"
                 name="radioInputName-:rv:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r12:"
                 tabindex="-1"
          >
            Aksjeselskap
          </label>
        </div>
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r13:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 value="annet"
                 checked
                 name="radioInputName-:rv:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r13:"
                 tabindex="-1"
          >
            Annet
          </label>
        </div>
      </div>
      <div id="radioErrorId-:ru:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/RadioGroup WithoutErrorMessage play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5"
            data-has-spacing="true"
  >
    <legend id="legendId-:r2a:"
            class="_srOnly_u2f5e_39"
    >
      Type virksomhet
    </legend>
    <div class="_legend_u2f5e_15"
         aria-hidden="true"
    >
      Type virksomhet
    </div>
    <div class="_contentContainer_u2f5e_32">
      <div class="_radioGroupItemContainer_1f9v8_5">
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r2b:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 value="foretak"
                 name="radioInputName-:r29:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r2b:"
                 tabindex="-1"
          >
            Enkeltpersonsforetak
          </label>
        </div>
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r2c:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 value="selskap"
                 name="radioInputName-:r29:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r2c:"
                 tabindex="-1"
          >
            Aksjeselskap
          </label>
        </div>
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r2d:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 value="annet"
                 name="radioInputName-:r29:"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r2d:"
                 tabindex="-1"
          >
            Annet
          </label>
        </div>
      </div>
      <div id="radioErrorId-:r28:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;
